# document-rectification

./: .gitignore  README.md  pyproject.toml
document_rectification/: common.py  data.py  debug.ipynb  main.py  train.py
document_rectification/models/: auto_encoder.py  document_ae_rectifier.py  document_gan_rectifier.py  document_rectifier.py  geometric_transformer.py
tests/: test_document_rectification.py  test_simple_gan.py
