[tool.poetry]
name = "document-rectification"
version = "0.1.0"
description = ""
authors = ["Iliya Zhecev <iliya.zhechev@gmail.com>"]

[tool.poetry.scripts]
data = 'document_rectification.data:main'
train = 'document_rectification.train:main'

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.8.1"
torchvision = "^0.9.1"
tqdm = "^4.61.0"
matplotlib = "^3.4.2"
kornia = "^0.5.3"
pytorch-lightning = "^1.3.4"
ez-torch = {git = "https://github.com/ichko/ez-torch", rev = "master"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.5b2", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
